# mysql-mcp-dolphin

./: .env  README.md  pyproject.toml
src/mysql_mcp_dolphin/: config.py  db_conn.py  mcp_server.py
