[project]
name = "mysql-mcp-dolphin"
version = "0.1.0"
description = "使用FastMCP构建MySql Mcp Server，支持Streamable HTTP, STDIO, SSE，支持读写权限控制"
readme = "README.md"
keywords = ["mysql", "mcp", "mcp-server"]
authors = [ {name = "dolphin", email = "ericql57@163.com"} ]
requires-python = ">=3.10"
dependencies = [
    "aiomysql>=0.2.0",
    "fastmcp>=2.7.1",
    "python-dateutil>=1.1.0",
]

[project.scripts]
mysql-mcp-dolphin = "mysql_mcp_dolphin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"